--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="control-buttons">
-        <button id="zoomInBtn" class="btn-control" aria-label="Powiększ">➕</button>
-        <button id="zoomOutBtn" class="btn-control" aria-label="Pomniejsz">➖</button>
-        <button id="themeToggleBtn" class="btn-control" aria-label="Przełącz tryb ciemny">🌙</button>
-    </div>
     <div class="logo-container">
-        <a href="https://finance-brothers.pl">
-            <img src="cropped-logo-FB-1.png" alt="Finance Brothers Logo" class="logo d-block mx-auto">
-        </a>
+        <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
+        <div class="zoom-controls">
+            <button id="zoomInBtn" class="btn-control" aria-label="Powiększ">+</button>
+            <button id="zoomOutBtn" class="btn-control" aria-label="Pomniejsz">-</button>
+            <button id="themeToggleBtn" class="btn-control" aria-label="Przełącz tryb ciemny">🌙</button>
+        </div>
     </div>
     <div class="container">
         <div class="form-section" id="formSection">
