--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="control-buttons">
-        <button id="zoomInBtn" class="btn-control" aria-label="Powiększ">➕</button>
-        <button id="zoomOutBtn" class="btn-control" aria-label="Pomniejsz">➖</button>
-        <button id="themeToggleBtn" class="btn-control" aria-label="Przełącz tryb ciemny">🌙</button>
-    </div>
     <div class="logo-container">
         <a href="https://finance-brothers.pl">
             <img src="cropped-logo-FB-1.png" alt="Finance Brothers Logo" class="logo d-block mx-auto">
@@ -359,6 +354,13 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="control-buttons">
+            <button id="zoomInBtn" class="btn-control" aria-label="Powiększ">+</button>
+            <button id="zoomOutBtn" class="btn-control" aria-label="Pomniejsz">-</button>
+            <button id="themeToggleBtn" class="btn-control" aria-label="Przełącz tryb ciemny">🌙</button>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
