--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 </head>
 <body>
     <div class="logo-container">
-        <a href="https://finance-brothers.pl">
+        <a href="#" id="logoLink">
             <img src="cropped-logo-FB-1.png" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         </a>
+        <div class="control-buttons">
+            <button id="zoomInBtn" class="btn-control" aria-label="Powiększ">+</button>
+            <button id="zoomOutBtn" class="btn-control" aria-label="Pomniejsz">-</button>
+            <button id="themeToggleBtn" class="btn-control" aria-label="Przełącz tryb ciemny">🌙</button>
+        </div>
     </div>
     <div class="container">
         <div class="form-section" id="formSection">
@@ -354,13 +359,6 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <div class="control-buttons">
-            <button id="zoomInBtn" class="btn-control" aria-label="Powiększ">+</button>
-            <button id="zoomOutBtn" class="btn-control" aria-label="Pomniejsz">-</button>
-            <button id="themeToggleBtn" class="btn-control" aria-label="Przełącz tryb ciemny">🌙</button>
-        </div>
-    </footer>
     <script src="script.js"></script>
 </body>
 </html>
