--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <a href="#" id="logoLink">
+        <a href="https://finance-brothers.pl" id="logoLink">
             <img src="cropped-logo-FB-1.png" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         </a>
         <div class="control-buttons">
