--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="form-section" id="formSection1">
                     <h4>Twój Kredyt</h4>
                     <div class="form-row">
-                        <div class="form-group kwota">
+                        <div class="form-group">
                             <label class="form-label">Kwota Kredytu</label>
                             <div class="input-group">
                                 <input type="number" class="form-control" id="kwotaKredytu" value="500000">
@@ -39,7 +39,7 @@
                             <input type="range" class="form-range" id="ratyRange" min="12" max="360" step="1" value="360">
                             <div class="sub-info" id="ratyInfo">Ilość lat: 30</div>
                         </div>
-                        <div class="form-group oprocentowanie">
+                        <div class="form-group">
                             <label class="form-label">Oprocentowanie</label>
                             <div class="input-group">
                                 <input type="number" class="form-control" id="oprocentowanie" value="7" step="0.01">
@@ -58,7 +58,7 @@
                             </select>
                             <div class="sub-info"></div>
                         </div>
-                        <div class="form-group prowizja">
+                        <div class="form-group">
                             <label class="form-label">Prowizja</label>
                             <div class="input-group">
                                 <input type="number" class="form-control" id="prowizja" value="2" step="0.01">
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group miesieczna">
+                            <div class="form-group">
                                 <label class="form-label">Miesięczna</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="nadplataMiesieczna" value="0">
@@ -91,7 +91,7 @@
                                 <input type="range" class="form-range" id="nadplataMiesiecznaRange" min="0" max="5000" step="10" value="0">
                                 <div class="sub-info"></div>
                             </div>
-                            <div class="form-group jednorazowa">
+                            <div class="form-group">
                                 <label class="form-label">Jednorazowa</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="nadplataJednorazowa" value="0">
@@ -108,7 +108,7 @@
                 <div class="form-section" id="formSection2">
                     <h4>Nowy Kredyt</h4>
                     <div class="form-row">
-                        <div class="form-group kwota">
+                        <div class="form-group">
                             <label class="form-label">Kwota Kredytu</label>
                             <div class="input-group">
                                 <input type="number" class="form-control" id="kwotaKredytu2" value="500000">
@@ -126,7 +126,7 @@
                             <input type="range" class="form-range" id="ratyRange2" min="12" max="360" step="1" value="360">
                             <div class="sub-info" id="ratyInfo2">Ilość lat: 30</div>
                         </div>
-                        <div class="form-group oprocentowanie">
+                        <div class="form-group">
                             <label class="form-label">Oprocentowanie</label>
                             <div class="input-group">
                                 <input type="number" class="form-control" id="oprocentowanie2" value="7" step="0.01">
@@ -145,7 +145,7 @@
                             </select>
                             <div class="sub-info"></div>
                         </div>
-                        <div class="form-group prowizja">
+                        <div class="form-group">
                             <label class="form-label">Prowizja</label>
                             <div class="input-group">
                                 <input type="number" class="form-control" id="prowizja2" value="2" step="0.01">
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group miesieczna">
+                            <div class="form-group">
                                 <label class="form-label">Miesięczna</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="nadplataMiesieczna2" value="0">
@@ -178,7 +178,7 @@
                                 <input type="range" class="form-range" id="nadplataMiesiecznaRange2" min="0" max="5000" step="10" value="0">
                                 <div class="sub-info"></div>
                             </div>
-                            <div class="form-group jednorazowa">
+                            <div class="form-group">
                                 <label class="form-label">Jednorazowa</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="nadplataJednorazowa2" value="0">
