--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="form-group">
                             <label class="form-label">Prowizja</label>
                             <div class="input-group">
-                                <input type="number" class="form-control" id="prowizja" value="2" step="0.01">
+                                <input type="number" class="form-control prowizja" id="prowizja" value="2" step="0.01">
                                 <span class="input-group-text">%</span>
                             </div>
                             <div class="sub-info" id="prowizjaInfo">Wartość prowizji: 10 000,00 zł</div>
@@ -72,7 +72,7 @@
                             <input type="checkbox" id="nadplataCheckbox"> Włącz nadpłaty
                         </label>
                     </div>
-                    <div id="nadplataSection">
+                    <div id="nadplataSection" style="display: none;">
                         <div class="form-row">
                             <div class="radio-option">
                                 <input type="radio" name="nadplataType" id="skrocenie" value="skrocenie" checked>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="form-wrapper">
-                <div class="form-section" id="formSection2">
+                <div class="form-section" id="formSection2" style="display: none;">
                     <h4>Nowy Kredyt</h4>
                     <div class="form-row">
                         <div class="form-group">
@@ -148,7 +148,7 @@
                         <div class="form-group">
                             <label class="form-label">Prowizja</label>
                             <div class="input-group">
-                                <input type="number" class="form-control" id="prowizja2" value="2" step="0.01">
+                                <input type="number" class="form-control prowizja" id="prowizja2" value="2" step="0.01">
                                 <span class="input-group-text">%</span>
                             </div>
                             <div class="sub-info" id="prowizjaInfo2">Wartość prowizji: 10 000,00 zł</div>
@@ -159,7 +159,7 @@
                             <input type="checkbox" id="nadplataCheckbox2"> Włącz nadpłaty
                         </label>
                     </div>
-                    <div id="nadplataSection2">
+                    <div id="nadplataSection2" style="display: none;">
                         <div class="form-row">
                             <div class="radio-option">
                                 <input type="radio" name="nadplataType2" id="skrocenie2" value="skrocenie" checked>
