--- a/index.html
+++ b/index.html
@@ -27,20 +27,6 @@
                     <form id="obligacjeForm">
                         <div class="form-row">
                             <div class="form-group">
-                                <label for="typObligacji" class="form-label">Typ obligacji*</label>
-                                <select class="form-control" id="typObligacji">
-                                    <option value="OTS" selected>3-miesięczne (OTS)</option>
-                                    <option value="ROR">12-miesięczne (ROR)</option>
-                                    <option value="DOR">24-miesięczne (DOR)</option>
-                                    <option value="TOS">3-letnie (TOS)</option>
-                                    <option value="COI">4-letnie (COI)</option>
-                                    <option value="EDO">10-letnie (EDO)</option>
-                                    <option value="ROS">6-letnie (ROS)</option>
-                                    <option value="ROD">12-letnie (ROD)</option>
-                                </select>
-                                <div class="sub-info">Wybierz rodzaj obligacji</div>
-                            </div>
-                            <div class="form-group">
                                 <label for="kwota" class="form-label">Kwota inwestycji</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="kwota" min="100" max="10000000" step="100" value="10000">
@@ -49,25 +35,17 @@
                                 <input type="range" class="form-range" id="kwotaRange" min="100" max="10000000" step="100" value="10000">
                                 <div class="sub-info" id="iloscObligacji">Ilość obligacji: 100</div>
                             </div>
-                            <div class="form-group" id="dynamicRateGroup">
-                                <label for="dynamicRate" class="form-label" id="dynamicRateLabel">Stopa Ref. NBP</label>
+                            <div class="form-group" id="okresInwestycji">
+                                <label for="okresInwestycji" class="form-label">Okres inwestycji (miesiące)</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="dynamicRate" min="0.1" max="50" step="0.05" value="4.90">
-                                    <span class="input-group-text">%</span>
+                                    <input type="number" class="form-control" id="okresInwestycji" min="3" max="144" step="1" value="3">
+                                    <span class="input-group-text">mc-y</span>
                                 </div>
-                                <input type="range" class="form-range" id="dynamicRateRange" min="0.1" max="50" step="0.05" value="4.90">
-                                <div class="sub-info" id="dynamicRateInfo"></div>
+                                <input type="range" class="form-range" id="okresInwestycjiRange" min="3" max="144" step="1" value="3">
+                                <div class="sub-info" id="lata">Ilość lat: 0</div>
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group">
-                                <label for="okres" class="form-label">Okres inwestycji</label>
-                                <div class="input-group">
-                                    <input type="number" class="form-control" id="okres" min="3" max="144" step="1" value="3" readonly>
-                                    <span class="input-group-text">mc-y</span>
-                                </div>
-                                <div class="sub-info" id="lata"></div>
-                            </div>
                             <div class="form-group">
                                 <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
                                 <div class="input-group">
@@ -109,9 +87,6 @@
                         </div>
                     </form>
                 </div>
-            </div>
-            <div class="data-container">
-                <div class="data-info"><strong>Dane z dnia:</strong> <span class="data-date"><strong>01.04.2025r.</strong></span></div>
             </div>
         </div>
     </div>
