--- a/index.html
+++ b/index.html
@@ -36,13 +36,22 @@
                                 <div class="sub-info" id="iloscObligacji">Ilość obligacji: 100</div>
                             </div>
                             <div class="form-group" id="okresInwestycji">
-                                <label for="okresInwestycji" class="form-label">Okres inwestycji (miesiące)</label>
+                                <label for="okresInwestycji" class="form-label">Okres inwestycji</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="okresInwestycji" min="3" max="144" step="1" value="3">
                                     <span class="input-group-text">mc-y</span>
                                 </div>
                                 <input type="range" class="form-range" id="okresInwestycjiRange" min="3" max="144" step="1" value="3">
                                 <div class="sub-info" id="lata">Ilość lat: 0</div>
+                            </div>
+                            <div class="form-group" id="inflacja">
+                                <label for="inflacja" class="form-label">Inflacja</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="inflacja" min="0.1" max="50" step="0.1" value="4.90">
+                                    <span class="input-group-text">%</span>
+                                </div>
+                                <input type="range" class="form-range" id="inflacjaRange" min="0.1" max="50" step="0.1" value="4.90">
+                                <div class="sub-info" id="inflacjaInfo">Stopa inflacji: 4.9%</div>
                             </div>
                         </div>
                         <div class="form-row">
@@ -55,26 +64,12 @@
                                 <div class="sub-info" id="oprocentowanieInfo"></div>
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div id="ikeIkzeContainer">
-                                <label class="checkbox-label" for="ikeIkzeBtn">
-                                    <input type="checkbox" id="ikeIkzeBtn">
-                                    <span class="checkbox-custom"></span>
-                                    <b>Inwestycje w IKE lub IKZE</b>
-                                </label>
-                            </div>
-                        </div>
                         <div class="variable-rate-container">
                             <div class="checkbox-row" id="variableCheckboxRow">
                                 <label class="checkbox-label" id="inflacjaZmiennaLabel">
                                     <input type="checkbox" id="inflacjaZmiennaBtn">
                                     <span class="checkbox-custom"></span>
                                     <b>Zmienna Inflacja</b>
-                                </label>
-                                <label class="checkbox-label" id="stopaZmiennaLabel">
-                                    <input type="checkbox" id="stopaZmiennaBtn">
-                                    <span class="checkbox-custom"></span>
-                                    <b>Zmienna Stopa Ref. NBP</b>
                                 </label>
                             </div>
                             <div class="variable-inputs" id="variableInputs">
