--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                                     <span class="input-group-text">zł</span>
                                 </div>
                                 <input type="range" class="form-range" id="kwotaRange" min="100" max="10000000" step="100" value="10000">
-                                <div class="sub-info" id="iloscObligacji">Ilość obligacji: 100</div>
                             </div>
                             <div class="form-group" id="okresInwestycji">
                                 <label for="okresInwestycji" class="form-label">Okres inwestycji</label>
@@ -51,7 +50,6 @@
                                     <span class="input-group-text">%</span>
                                 </div>
                                 <input type="range" class="form-range" id="inflacjaRange" min="0.1" max="50" step="0.1" value="4.90">
-                                <div class="sub-info" id="inflacjaInfo">Stopa inflacji: 4.9%</div>
                             </div>
                         </div>
                         <div class="form-row">
@@ -61,7 +59,6 @@
                                     <option value="rowne">Raty równe</option>
                                     <option value="malejace">Raty malejące</option>
                                 </select>
-                                <div class="sub-info" id="rodzajRatInfo">Wybrano: Raty równe</div>
                             </div>
                             <div class="form-group" id="wartoscRaty">
                                 <label for="wartoscRaty" class="form-label">Wartość raty</label>
@@ -78,10 +75,15 @@
                         </div>
                         <div class="variable-rate-container">
                             <div class="checkbox-row" id="variableCheckboxRow">
-                                <label class="checkbox-label" id="inflacjaZmiennaLabel">
-                                    <input type="checkbox" id="inflacjaZmiennaBtn">
+                                <label class="checkbox-label" id="nadplataKredytuLabel">
+                                    <input type="checkbox" id="nadplataKredytuBtn">
                                     <span class="checkbox-custom"></span>
-                                    <b>Zmienna Inflacja</b>
+                                    <b>Nadpłata Kredytu</b>
+                                </label>
+                                <label class="checkbox-label" id="zmienneOprocentowanieLabel">
+                                    <input type="checkbox" id="zmienneOprocentowanieBtn">
+                                    <span class="checkbox-custom"></span>
+                                    <b>Zmienne Oprocentowanie</b>
                                 </label>
                             </div>
                             <div class="variable-inputs" id="variableInputs">
